[package]
name = "fix"
version = "0.1.1"
description = "Fixed-point number types"
authors = ["Curtis McEnroe <programble@gmail.com>"]
repository = "https://github.com/programble/fix"
license = "ISC"
readme = "README.md"
keywords = ["fixed", "point", "number", "integer", "arithmetic"]
categories = ["data-structures", "no-std"]

[badges]
travis-ci = { repository = "programble/fix" }

[features]
i128 = ["typenum/i128"]

[dependencies]
typenum = "1.9.0"
